[package]
name = "catread"
authors = ["J/A"]
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/catread"
homepage = "https://github.com/archer884/catread"
repository = "https://github.com/archer884/catread"
description = """
A reader that allows for concatenation of multiple readers.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

